# tc-ml-books

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  alembic.ini  books_toscrape.db  main.py  pylock.toml  pyproject.toml  run_pipeline.py  setup_dev.sh
.github/workflows/: scrape_pipeline.yml
alembic/: env.py
alembic/versions/: 591d5fe157a1_create_predictions_table.py  707e8bf1fa7e_add_column_is_admin_to_users.py  96803ff649f2_create_tables_categories_and_books.py  c24c183ce7a8_add_user_table.py
dashboard/: app.py
docs/: PLAN_ARQUITETURAL.md
pipeline/: run_pipeline.py
src/: database.py  models.py
src/api/: auth.py  books.py  categories.py  health.py  ml.py  stats.py  user.py
src/core/: __init__.py  database.py  hashing.py  pagination.py  security.py  utils.py
src/crud/: __init__.py  books.py  categories.py  ml.py  stats.py  users.py
src/data/: books_toscrape.csv
src/middlewares/: logging_middleware.py
src/models/: __init__.py  book.py  category.py  prediction.py  user.py
src/schemas/: __init__.py  book.py  category.py  page.py  prediction.py  stats.py  user.py
src/scripts/: __init__.py  bookstoscrape_scraper.py  log_scraping.txt  log_seed.txt  seed.py
